<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="28sp"
            android:textColor="#304FFE"
            android:fontFamily="@font/nunito_bold"
            android:layout_centerHorizontal="true" />

        <!-- Description Text -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_subtitle"
            android:textSize="18sp"
            android:textColor="#414141"
            android:layout_below="@id/tvWelcomeBack"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center" />

        <!-- Name Label -->
        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="19sp"
            android:textColor="#121212"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_medium" />

        <!-- Name Input -->
        <EditText
            android:id="@+id/etNameInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name_hint"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_edittext_register"
            android:inputType="textPersonName"
            android:layout_below="@id/tvNameLabel"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true" />

        <!-- Email Label -->
        <TextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="19sp"
            android:textColor="#121212"
            android:layout_below="@id/etNameInput"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_medium" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/etEmailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_edittext_register"
            android:inputType="textEmailAddress"
            android:layout_below="@id/tvEmailLabel"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true" />

        <!-- Password Label -->
        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="19sp"
            android:textColor="#121212"
            android:layout_below="@id/etEmailInput"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_medium" />

        <!-- Password Input -->
        <com.example.myapplication.InputPasswordToggle
            android:id="@+id/etPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_edittext_register"
            android:layout_below="@id/tvPasswordLabel"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true" />

        <!-- Confirm Password Label -->
        <TextView
            android:id="@+id/tvConfirmPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="19sp"
            android:textColor="#121212"
            android:layout_below="@id/etPasswordInput"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_medium" />

        <!-- Confirm Password Input -->
        <com.example.myapplication.InputPasswordToggle
            android:id="@+id/etConfirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password_hint"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_edittext_register"
            android:layout_below="@id/tvConfirmPasswordLabel"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register_button"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_button"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_semibold"
            android:layout_below="@id/etConfirmPasswordInput"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true" />

        <!-- Login Link -->
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="15sp"
            android:textColor="#5A5A5A"
            android:layout_below="@id/btnRegister"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_medium"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true" />


    </RelativeLayout>
</LinearLayout>
