<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- Back Button -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- RelativeLayout for Back Button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Back Button -->
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="16dp"/>
        </RelativeLayout>

        <!-- RelativeLayout for Welcome Text and Description -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            >

            <!-- Welcome Text -->
            <TextView
                android:id="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="28sp"
                android:textColor="#304FFE"
                android:fontFamily="@font/nunito_semibold"
                android:layout_centerHorizontal="true" />

            <!-- Description Text -->
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_subtitle"
                android:textSize="18sp"
                android:textColor="#414141"
                android:layout_below="@id/tvWelcomeBack"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="19sp"
                android:textColor="#121212"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_medium"
                android:layout_below="@id/tvDescription"

                />

            <!-- Email Input -->
            <EditText
                android:id="@+id/etEmailInput"
                android:layout_width="800dp"
                android:layout_height="50dp"
                android:hint="@string/email_hint"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/rounded_edittext_register"
                android:inputType="textEmailAddress"
                android:layout_below="@id/tvEmailLabel"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="800dp"
                android:layout_height="50dp"
                android:text="@string/send_button"
                android:textColor="#FFFFFF"
                android:background="@drawable/rounded_button"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:fontFamily="@font/nunito_semibold"
                android:layout_below="@id/etEmailInput"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true" />

            <!-- Login Link -->
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="15sp"
                android:textColor="#5A5A5A"
                android:layout_below="@id/btnRegister"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_medium"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true" />
        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
